# visual-wiggum

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ARCHIVE.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  plan.md  pyproject.toml  run-container.sh
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
docs/: implementation-log.md  plan-session-transcript.jsonl  plan.md
specs/: archive-group-headings.md  config.md  global-progress-bar.md  history.md  loop-history.md  models.md  parsing.md  scanning.md  todo.md  track-implementation-plan.md  tui.md  web.md  wiggum-plan-sections.md
specs/archive/: archive-group-headings.md  global-progress-bar.md  loop-history.md  track-implementation-plan.md  wiggum-plan-sections.md
src/spec_view/: __init__.py  cli.py
src/spec_view/core/: config.py  detector.py  history.py  models.py  parser.py  scanner.py  watcher.py
src/spec_view/tui/: app.py  dashboard.py  history.py  progress_bar.py  spec_view.py  task_board.py
src/spec_view/web/: server.py
src/spec_view/web/static/: style.css
src/spec_view/web/templates/: base.html  dashboard.html  history.html  spec.html  tasks.html
src/spec_view/web/templates/partials/: dashboard_content.html  global_progress.html  history_content.html  spec_content.html  tasks_content.html
tests/: test_archive_subgroups.py  test_config.py  test_detector.py  test_history.py  test_models.py  test_parser.py  test_progress_bar.py  test_scanner.py  test_web_history.py  test_web_plan.py  test_web_progress.py  test_web_specs_section.py  test_wiggum.py
