[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-view"
version = "0.2.2"
description = "Universal spec-driven development dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "spec-view contributors" }]
keywords = ["spec", "dashboard", "tui", "spec-kit", "kiro", "markdown", "tasks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.40",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
    "watchfiles>=0.20",
    "markdown>=3.5",
]

[project.urls]
Homepage = "https://github.com/hjer/visual-wiggum"
Repository = "https://github.com/hjer/visual-wiggum"
Issues = "https://github.com/hjer/visual-wiggum/issues"

[project.scripts]
spec-view = "spec_view.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
